<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:icon="@drawable/ic_home"
        android:id="@+id/home"
        android:title="@string/home">
    </item>
    <item
        android:icon="@drawable/ic_chat"
        android:id="@+id/chat"
        android:title="@string/chat">
    </item>

    <item
        android:icon="@drawable/ic_topic"
        android:id="@+id/topic"
        android:title="@string/topic">
    </item>
    <item
        android:icon="@drawable/ic_notification_add"
        android:id="@+id/notification_add"
        android:title="@string/notification_add">
    </item>
    <item
        android:icon="@drawable/ic_person"
        android:id="@+id/person"
        android:title="@string/person">
    </item>
</menu>